# ha-camera-viewer

./: .gitignore  README.md  esphome-api.js  main.js  package-lock.json  package.json  preload.js  signpath-artifact-config.xml
.github/workflows/: release.yml
renderer/: popup.html  settings.html
src/: popup.html  settings.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  esphome.rs  ha_ws.rs  main.rs  proxy.rs
