[package]
name = "ha-camera-viewer"
version = "2.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["stream", "native-tls"] }
axum = "0.7"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
dirs = "5"
